Avoid header buttons becoming too wide
Also moved their CSS into index.css now.

--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,15 @@
     margin-top: 70px;
 }
 
+.my-top-box .my-buttons .btn {
+    display: block;
+    margin-bottom: 10px;
+    box-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+    max-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 @media (max-width: 767px) {
     .container {
         margin-right: 20px;
